# pets

./: .gitignore  LICENSE
CLI/: README.md
CLI/ls/: Cargo.toml
CLI/ls/src/: main.rs
CLI/pwd/: Cargo.toml
CLI/pwd/src/: main.rs
CLI/touch/: Cargo.toml
CLI/touch/src/: main.rs
DiscordBot/: Cargo.toml
DiscordBot/src/: main.rs
Guitar Player/: README.md
Guitar Player/player/: Cargo.toml  README.md
Guitar Player/player/src/: main.rs
Music Visualiser/: README.md  main.py
Music Visualiser/app/: audio.py
Music Visualiser/settings/: config.ini  malters_metronome.json
Music Visualiser/templates/: main.ui
Music Visualiser/views/: main_view.py
launch_tracker/: Cargo.toml  README.md  config.json
launch_tracker/config/: config.ini  rustrover.json
launch_tracker/src/: main.rs  tests_file.rs
screenCapturer/: app.py  requirements.txt
screenCapturer/screen_recorder/: config.ini  screen_recorder.py
screenCapturer/screener/: main.py
trigada/: README.md
trigada/Trigada/trigada/: manage.py  requirements.txt
trigada/Trigada/trigada/app/: admin.py  annexes.py  forms.py  models.py  urls.py  views.py
trigada/Trigada/trigada/app/migrations/: 0001_initial.py  0002_person_image.py  0003_video.py  0010_anecdote.py  (+9 more)
trigada/Trigada/trigada/templates/: 404.html  500.html  anecdotes.html  blog.html  main.html  makers.html  musician.html  presentation_video.html  songs.html  success_form.html  tabs.html  videos.html
trigada/Trigada/trigada/trigada/: asgi.py  settings.py  urls.py  wsgi.py
trigada/trigada_rs/: Cargo.toml
trigada/trigada_rs/src/: main.rs
(+39 files in other folders)
