[package]
name = "DiscordBot"
version = "0.1.0"
authors = ["Michael Sapranov <stillouyng@godblessed.ru>"]
edition = "2021"

[dependencies]
serenity = { version = "0.12.2" }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
songbird = { version = "0.4.1", features = ["builtin-queue"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.5"
chrono = "0.4.38"
timeago = "0.4.2"
regex = "1.10.5"
audiopus_sys = "0.2.2"