[package]
name = "launch_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.12"
serde_json = "1.0.117"
chrono = "0.4.38"
configparser = "3.0.4"
serde = { version = "1.0.202", features = ["derive"] }
log = "0.4.21"
simple-logging = "2.0.2"
